# redipy

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.dev.txt  requirements.noversion.txt  requirements.txt
.github/workflows/: app.yaml
examples/: __init__.py  workers.py
sh/: clean.sh  compileall.sh  findpy.sh  forgottenformat.sh  git_check.sh  git_check_publish.sh  install.sh  pack.sh  publish.sh  requirements_complete.sh  run_pytest.sh  run_redis.sh  split_test.sh  version.sh
src/redipy/: __init__.py  api.py  main.py  plugin.py  script.py  util.py
src/redipy/backend/: __init__.py  backend.py  runtime.py
src/redipy/graph/: __init__.py  cmd.py  expr.py  seq.py
src/redipy/helpers/: __init__.py  cache.py  mavg.py  stack.py
src/redipy/memory/: __init__.py  gfun.py  local.py  rfun.py  rt.py  state.py
src/redipy/redis/: __init__.py  conn.py  gpatch.py  helpers.py  lua.py  rpatch.py
src/redipy/symbolic/: __init__.py  core.py  expr.py  fun.py  rhash.py  rlist.py  rset.py  rvar.py  rzset.py  seq.py  wrap.py
test/: __init__.py  __main__.py  mng.py  test_api.py  test_err.py  test_expire.py  test_keys.py  test_misc.py  test_pipe.py  test_rlist.py  test_rset.py  test_rvar.py  test_rzset.py  test_sanity.py  test_simple.py  test_stack.py  test_util.py  util.py
